--- a/backend/server/.env
+++ b/backend/server/.env
@@ -3,5 +3,5 @@ PORT=5000
 SESSION_SECRET=super_secret_session
 JWT_SECRET=super_secret_jwt
 JWT_EXPIRES=1h
-CLIENT_URL=smart-logistics-tracking-system.vercel.app
-
+CLIENT_URL=https://smart-logistics-tracking-system.vercel.app
+NODE_ENV=production
